--- a/chatbot.html
+++ b/chatbot.html
@@ -2,7 +2,8 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Tambahkan viewport-fit=cover untuk mendukung safe areas pada perangkat dengan notch -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>GigiQ - Chatbot Perawatan Gigi</title>
     <!-- Font Awesome for Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -22,14 +23,14 @@
             padding: 0;
         }
 
-        /* General Styles */
+        /* CSS Utama */
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #1e1e1e; /* Dark background */
             color: #e0e0e0; /* Light text */
             height: 100%;
             width: 100%;
-            /* Flexbox untuk mobile only */
+            /* Flexbox untuk desktop */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -37,6 +38,7 @@
             padding-bottom: env(safe-area-inset-bottom);
             padding-left: env(safe-area-inset-left);
             padding-right: env(safe-area-inset-right);
+            overflow: hidden; /* Prevent scrolling on body */
         }
 
         /* Chat Container */
@@ -45,11 +47,13 @@
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
             width: 100%;
-            height: 100%;
+            height: calc(var(--vh, 1vh) * 100); /* Gunakan variabel CSS untuk tinggi viewport */
             max-width: 1000px; /* For large screens */
             display: flex;
             flex-direction: column;
             overflow: hidden; /* Allow internal scrolling */
+            position: relative; /* For positioning child elements */
+            padding-top: 60px; /* Sesuaikan dengan tinggi header */
         }
 
         /* Header */
@@ -61,7 +65,9 @@
             justify-content: space-between; /* Space between buttons */
             align-items: center;
             flex-shrink: 0; /* Prevent shrinking */
-            position: relative;
+            position: sticky; /* Make header sticky */
+            top: 0; /* Stick to top */
+            z-index: 1000; /* Ensure header is above other elements */
         }
 
         /* Tombol 3D dengan Warna Biru yang Digelapkan */
@@ -295,22 +301,25 @@
         @media (max-width: 900px) {
             #chat-container {
                 max-width: 100%;
-                height: 100%;
+                height: auto; /* Ubah dari 100% atau 100vh ke auto */
             }
         }
 
         @media (max-width: 600px) {
-            /* Apply flexbox centering on mobile */
+            /* Ubah display flex ke block pada mobile */
             body {
-                justify-content: center;
-                align-items: center;
-                overflow: auto; /* Allow scroll if necessary */
+                display: block;
+                padding-top: env(safe-area-inset-top);
+                padding-bottom: env(safe-area-inset-bottom);
+                padding-left: env(safe-area-inset-left);
+                padding-right: env(safe-area-inset-right);
+                overflow: auto; /* Izinkan scroll jika diperlukan */
             }
 
             #chat-container {
-                border-radius: 10px;
                 max-width: 100%;
-                height: 100vh;
+                height: auto; /* Hindari penggunaan 100vh */
+                padding-top: 60px; /* Sesuaikan jika menggunakan posisi sticky */
             }
 
             .chat-header .header-title {
@@ -345,7 +354,7 @@
 
             /* Adjust chat-container height for smaller screens */
             #chat-container {
-                height: 100vh;
+                height: auto; /* Ubah dari 100vh ke auto */
             }
         }
 
@@ -379,6 +388,16 @@
         }
     </style>
     <script>
+        // Variabel CSS untuk mengatasi masalah tinggi viewport pada mobile
+        function setViewportHeight() {
+            const vh = window.innerHeight * 0.01;
+            document.documentElement.style.setProperty('--vh', `${vh}px`);
+        }
+
+        window.addEventListener('resize', setViewportHeight);
+        window.addEventListener('orientationchange', setViewportHeight);
+        window.addEventListener('load', setViewportHeight);
+
         let questions = [];
 
         // Pertanyaan dan Jawaban Default
