--- a/chatbot.html
+++ b/chatbot.html
@@ -2,21 +2,21 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <!-- Tambahkan viewport-fit=cover untuk mendukung safe areas pada perangkat dengan notch -->
+    <!-- Mendukung safe areas pada perangkat dengan notch -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>GigiQ - Chatbot Perawatan Gigi</title>
-    <!-- Font Awesome for Icons -->
+    <!-- Font Awesome untuk Ikon -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <!-- Custom CSS -->
+    <!-- CSS Kustom -->
     <style>
         /* Global Box-Sizing */
         *, *::before, *::after {
             box-sizing: border-box;
         }
 
-        /* Reset Margins and Padding */
+        /* Reset Margins dan Padding */
         html, body {
             height: 100%;
             margin: 0;
@@ -26,8 +26,8 @@
         /* CSS Utama */
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #1e1e1e; /* Dark background */
-            color: #e0e0e0; /* Light text */
+            background-color: #1e1e1e; /* Latar belakang gelap */
+            color: #e0e0e0; /* Teks terang */
             height: 100%;
             width: 100%;
             display: flex;
@@ -38,40 +38,40 @@
             padding-bottom: env(safe-area-inset-bottom);
             padding-left: env(safe-area-inset-left);
             padding-right: env(safe-area-inset-right);
-            overflow: hidden; /* Prevent scrolling on body */
+            overflow: hidden; /* Mencegah scrolling pada body */
         }
 
         /* Chat Container */
         #chat-container {
-            background-color: #2a2a2a; /* Darker container */
+            background-color: #2a2a2a; /* Kontainer lebih gelap */
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
             width: 100%;
-            max-width: 1000px; /* For large screens */
+            max-width: 1000px; /* Untuk layar besar */
+            height: calc(var(--vh, 1vh) * 100); /* Tinggi penuh viewport */
             display: flex;
             flex-direction: column;
-            overflow: hidden; /* Allow internal scrolling */
-            position: relative; /* For positioning child elements */
-            flex: 1; /* Allow container to grow and fill available space */
+            overflow: hidden; /* Memungkinkan scrolling internal */
+            position: relative; /* Untuk penempatan elemen anak */
         }
 
         /* Header */
         .chat-header {
-            background-color: #4a90e2; /* Blue header */
+            background-color: #4a90e2; /* Header biru */
             color: #fff;
             padding: 15px;
             display: flex;
-            justify-content: space-between; /* Space between buttons */
+            justify-content: space-between; /* Ruang antara tombol */
             align-items: center;
-            flex-shrink: 0; /* Prevent shrinking */
-            position: sticky; /* Make header sticky */
-            top: 0; /* Stick to top */
-            z-index: 1000; /* Ensure header is above other elements */
+            flex-shrink: 0; /* Mencegah penyusutan */
+            position: sticky; /* Membuat header tetap */
+            top: 0; /* Menempel di atas */
+            z-index: 1000; /* Pastikan header di atas elemen lain */
         }
 
         /* Tombol 3D dengan Warna Biru yang Digelapkan */
         .btn-3d {
-            background: linear-gradient(145deg, #357ABD, #2A5DAA); /* Darker blue gradient */
+            background: linear-gradient(145deg, #357ABD, #2A5DAA); /* Gradien biru gelap */
             border: none;
             border-radius: 10px;
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
@@ -88,13 +88,13 @@
             transform: perspective(1px) translateZ(0);
             position: relative;
             overflow: hidden;
-            margin: 0 5px; /* Spacing antara tombol */
+            margin: 0 5px; /* Jarak antar tombol */
             flex-shrink: 0;
         }
 
         /* Efek Hover untuk Tombol 3D */
         .btn-3d:hover {
-            background: linear-gradient(145deg, #2A5DAA, #1E4C9E); /* Slightly darker on hover */
+            background: linear-gradient(145deg, #2A5DAA, #1E4C9E); /* Gradien lebih gelap saat hover */
             box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
             transform: translateY(-3px);
         }
@@ -216,35 +216,40 @@
             background-color: #45a049;
         }
 
-        /* Instructions Section */
+        /* Instructions Modal */
+        #instructions-modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* Overlay gelap */
+            display: none; /* Disembunyikan secara default */
+            justify-content: center;
+            align-items: center;
+            z-index: 1002; /* Lebih tinggi dari header */
+        }
+
+        #instructions-modal.active {
+            display: flex;
+        }
+
         #instructions {
             background-color: #3c3c3c; /* Sama seperti input area */
-            padding: 15px;
-            display: none; /* Disembunyikan secara default */
-            overflow-y: auto;
-            font-size: 0.85rem;
-            flex-shrink: 0;
-            max-height: 70vh; /* Membatasi tinggi untuk memungkinkan scroll */
-            position: absolute;
-            top: 60px; /* Sesuaikan dengan padding-top pada #chat-container */
-            left: 50%;
-            transform: translateX(-50%);
+            padding: 20px;
             width: 90%;
             max-width: 600px;
             border-radius: 8px;
-            z-index: 1001; /* Lebih tinggi dari header */
+            overflow-y: auto;
+            max-height: 80vh;
+            position: relative;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            animation: fadeInModal 0.3s ease;
         }
 
-        #instructions::before {
-            content: "";
-            position: absolute;
-            top: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            border-width: 0 10px 10px 10px;
-            border-style: solid;
-            border-color: transparent transparent #3c3c3c transparent;
+        @keyframes fadeInModal {
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
         }
 
         #instructions h2 {
@@ -257,7 +262,7 @@
             margin: 5px 0;
         }
 
-        /* Upload Database Section (Sekarang dalam Info) */
+        /* Upload Database Section */
         #upload-section {
             margin-top: 20px;
             padding: 15px;
@@ -320,29 +325,15 @@
         @media (max-width: 900px) {
             #chat-container {
                 max-width: 100%;
-                height: calc(var(--vh, 1vh) * 100); /* Tetap menggunakan tinggi viewport */
             }
         }
 
         @media (max-width: 600px) {
-            /* Tetap menggunakan flex layout pada mobile */
-            body {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                height: 100vh;
-                padding-top: env(safe-area-inset-top);
-                padding-bottom: env(safe-area-inset-bottom);
-                padding-left: env(safe-area-inset-left);
-                padding-right: env(safe-area-inset-right);
-                overflow: hidden; /* Prevent scrolling on body */
-            }
-
+            /* Penyesuaian untuk mobile */
             #chat-container {
-                max-width: 100%;
-                height: calc(var(--vh, 1vh) * 100); /* Tetap menggunakan tinggi viewport */
-                padding-top: 60px; /* Sesuaikan jika menggunakan posisi sticky */
+                width: 100%;
+                height: calc(var(--vh, 1vh) * 100); /* Tinggi penuh viewport */
+                padding-top: 0; /* Menghapus padding-top karena header sudah sticky */
             }
 
             .chat-header .header-title {
@@ -376,17 +367,6 @@
             }
         }
 
-        /* Landscape Mode Adjustments */
-        @media (orientation: landscape) and (max-width: 600px) {
-            #chat-container {
-                max-width: 100%;
-            }
-
-            .chat-header .header-title {
-                font-size: 1.1rem;
-            }
-        }
-
         /* Scrollbar Styling */
         ::-webkit-scrollbar {
             width: 8px;
@@ -404,9 +384,22 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #777; 
         }
+
+        /* Aksesibilitas: Screen Reader Only */
+        .sr-only {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            white-space: nowrap; /* added line */
+            border: 0;
+        }
     </style>
     <script>
-        // Variabel CSS untuk mengatasi masalah tinggi viewport pada mobile
+        // Mengatasi masalah tinggi viewport pada mobile
         function setViewportHeight() {
             const vh = window.innerHeight * 0.01;
             document.documentElement.style.setProperty('--vh', `${vh}px`);
@@ -9815,47 +9808,49 @@
             return bestResponse;
         }
 
-        // Fungsi untuk menangani klik di luar #instructions
+        // Fungsi untuk menangani klik di luar #instructions-modal
         function handleClickOutside(event) {
+            const modal = document.getElementById('instructions-modal');
             const instructions = document.getElementById('instructions');
             const toggleButton = document.querySelector('.toggle-instructions');
-
-            // Jika #instructions tidak sedang ditampilkan, tidak perlu melakukan apa-apa
-            if (instructions.style.display !== "block") return;
 
             // Jika klik berada di dalam #instructions atau tombol toggle, tidak perlu menutup
             if (instructions.contains(event.target) || toggleButton.contains(event.target)) {
                 return;
             }
 
-            // Jika klik berada di luar #instructions dan tombol toggle, tutup #instructions
-            toggleInstructions(false);
+            // Tutup modal jika klik di luar
+            closeInstructions();
+        }
+
+        // Fungsi untuk membuka modal instructions
+        function openInstructions() {
+            const modal = document.getElementById('instructions-modal');
+            modal.classList.add('active');
+            document.addEventListener('click', handleClickOutside);
+        }
+
+        // Fungsi untuk menutup modal instructions
+        function closeInstructions() {
+            const modal = document.getElementById('instructions-modal');
+            modal.classList.remove('active');
+            document.removeEventListener('click', handleClickOutside);
         }
 
         // Fungsi untuk menampilkan atau menyembunyikan #instructions
-        function toggleInstructions(forceState) {
-            const instructions = document.getElementById('instructions');
-            const toggleButton = document.querySelector('.toggle-instructions');
-
-            if (typeof forceState === 'boolean') {
-                if (forceState) {
-                    instructions.style.display = "block";
-                    document.addEventListener('click', handleClickOutside);
-                } else {
-                    instructions.style.display = "none";
-                    document.removeEventListener('click', handleClickOutside);
-                }
-                return;
-            }
-
-            // Toggle display
-            if (instructions.style.display === "block") {
-                instructions.style.display = "none";
-                document.removeEventListener('click', handleClickOutside);
+        function toggleInstructions() {
+            const modal = document.getElementById('instructions-modal');
+            if (modal.classList.contains('active')) {
+                closeInstructions();
             } else {
-                instructions.style.display = "block";
-                document.addEventListener('click', handleClickOutside);
+                openInstructions();
             }
+        }
+
+        function sanitizeHTML(str) {
+            var temp = document.createElement('div');
+            temp.textContent = str;
+            return temp.innerHTML;
         }
 
         async function sendMessage() {
@@ -9884,17 +9879,55 @@
             }
         }
 
-        function sanitizeHTML(str) {
-            var temp = document.createElement('div');
-            temp.textContent = str;
-            return temp.innerHTML;
-        }
-
         document.addEventListener('keydown', function(event) {
             if (event.key === 'Enter') {
                 sendMessage();
             }
         });
+
+        // Dark Mode Toggle (Dihapus jika tidak diinginkan)
+        // Jika Anda tetap ingin mempertahankan Dark Mode toggle, pastikan
+        // bahwa pengaturannya benar. Namun, jika Anda ingin tema tetap gelap,
+        // Anda bisa menghapus bagian ini.
+
+        // function toggleDarkMode() {
+        //     document.body.classList.toggle('dark-mode');
+        //     // Simpan preferensi pengguna di localStorage
+        //     if (document.body.classList.contains('dark-mode')) {
+        //         localStorage.setItem('darkMode', 'enabled');
+        //     } else {
+        //         localStorage.setItem('darkMode', 'disabled');
+        //     }
+        // }
+
+        // Terapkan Preferensi Dark Mode Saat Load (Dihapus jika tidak diinginkan)
+        // window.onload = async function() {
+        //     await loadQuestions();
+        //     const welcomeMessage = `
+        //         Selamat datang di <b>GigiQ</b>! 
+        //         Saya di sini untuk membantu Anda memahami lebih banyak tentang perawatan gigi. 
+        //         Ketik pertanyaan seperti "bagaimana cara mengatasi bau mulut?" atau "bagaimana cara mengatasi gusi bengkak?" dan saya akan membantu menjawab.
+        //     `;
+        //     const chatbox = document.getElementById('chatbox');
+        //     const botMessage = document.createElement('div');
+        //     botMessage.classList.add('message', 'bot');
+        //     botMessage.innerHTML = welcomeMessage;
+        //     chatbox.appendChild(botMessage);
+        //     chatbox.scrollTop = chatbox.scrollHeight;
+
+        //     // Terapkan Dark Mode Jika Diaktifkan
+        //     const darkMode = localStorage.getItem('darkMode');
+        //     if (darkMode === 'enabled') {
+        //         document.body.classList.add('dark-mode');
+        //     }
+        // };
+
+        // Fungsi untuk menavigasi ke halaman HTML lokal yang berbeda
+        function navigateTo(page) {
+            // Tidak melakukan navigasi karena "GigiQ ChatBot" adalah judul
+            console.log("GigiQ ChatBot diklik");
+            // Anda bisa menambahkan animasi atau efek lain di sini
+        }
 
         // Pesan Pembuka
         window.onload = async function() {
@@ -9911,7 +9944,7 @@
             chatbox.appendChild(botMessage);
             chatbox.scrollTop = chatbox.scrollHeight;
 
-            // Terapkan Preferensi Dark Mode Jika Diaktifkan
+            // Terapkan Preferensi Dark Mode Jika Diaktifkan (Dihapus jika tidak diinginkan)
             const darkMode = localStorage.getItem('darkMode');
             if (darkMode === 'enabled') {
                 document.body.classList.add('dark-mode');
@@ -9959,29 +9992,31 @@
             <button id="sendButton" onclick="sendMessage()" aria-label="Kirim Pesan"><i class="fas fa-paper-plane"></i></button>
         </div>
 
-        <!-- Instructions Section (Info) -->
-        <div id="instructions" aria-hidden="true">
-            <h2>Cara Penggunaan</h2>
-            <p>1. Ketik pertanyaan Anda di kolom chat.</p>
-            <p>2. Tekan Enter atau klik tombol "Kirim".</p>
+        <!-- Instructions Modal -->
+        <div id="instructions-modal" aria-hidden="true">
+            <div id="instructions" role="dialog" aria-modal="true" aria-labelledby="instructions-title">
+                <h2 id="instructions-title">Cara Penggunaan</h2>
+                <p>1. Ketik pertanyaan Anda di kolom chat.</p>
+                <p>2. Tekan Enter atau klik tombol "Kirim".</p>
 
-            <h2>Kelebihan Aplikasi</h2>
-            <p><i class="fas fa-check-circle" style="color: #4CAF50;"></i> Dapat digunakan offline, memungkinkan akses informasi tanpa internet, termasuk di daerah terpencil sekalipun.</p>
+                <h2>Kelebihan Aplikasi</h2>
+                <p><i class="fas fa-check-circle" style="color: #4CAF50;"></i> Dapat digunakan offline, memungkinkan akses informasi tanpa internet, termasuk di daerah terpencil sekalipun.</p>
 
-            <h2>Kekurangan Aplikasi</h2>
-            <p><i class="fas fa-exclamation-circle" style="color: #f44336;"></i> Basis data aplikasi terbatas karena tidak terhubung ke internet, berbeda dengan AI yang terus memperbarui informasi.</p>
+                <h2>Kekurangan Aplikasi</h2>
+                <p><i class="fas fa-exclamation-circle" style="color: #f44336;"></i> Basis data aplikasi terbatas karena tidak terhubung ke internet, berbeda dengan AI yang terus memperbarui informasi.</p>
 
-            <!-- Upload Database Section (Tersembunyi di dalam Info) -->
-            <div id="upload-section">
-                <h2>Update Database</h2>
-                <input type="file" id="fileInput" accept=".json">
-                <button class="btn-3d" onclick="importDatabase()"><i class="fas fa-upload me-2"></i> Import</button>
-            </div>
+                <!-- Upload Database Section -->
+                <div id="upload-section">
+                    <h2>Update Database</h2>
+                    <input type="file" id="fileInput" accept=".json">
+                    <button class="btn-3d" onclick="importDatabase()" aria-label="Import Database"><i class="fas fa-upload me-2"></i> Import</button>
+                </div>
 
-            <!-- "Tingkatkan respons aplikasi ini dengan database premium – email untuk harga khusus: uray.fajar@gmail.com." Section -->
-            <div id="download-section">
-                <h2>"Tingkatkan respons aplikasi ini dengan database premium – email untuk harga khusus: uray.fajar@gmail.com."</h2>
-                <button class="btn-3d" onclick="downloadDatabase()"><i class="fas fa-download me-2"></i> Download</button>
+                <!-- Download Database Section -->
+                <div id="download-section">
+                    <h2>"Tingkatkan respons aplikasi ini dengan database premium – email untuk harga khusus: uray.fajar@gmail.com."</h2>
+                    <button class="btn-3d" onclick="downloadDatabase()" aria-label="Download Database"><i class="fas fa-download me-2"></i> Download</button>
+                </div>
             </div>
         </div>
 
