--- a/index.html
+++ b/index.html
@@ -565,8 +565,8 @@
                     // Tandai bahwa overlay sudah ditampilkan
                     sessionStorage.setItem('introShown', 'true');
                     // Arahkan ke link download aplikasi Android
-                    window.open('https://drive.google.com/file/d/1IPkBeNYpcPV700X_jMkhsG4FdOFjtew-/view?usp=sharing', '_blank');
-                    // Sembunyikan overlay
+                    window.open('https://drive.google.com/file/d/1p89y7aQGkira0S4OrSSxu_azsgZbVyIX/view?usp=sharing', '_blank');
+                    // kode lama https://drive.google.com/file/d/1IPkBeNYpcPV700X_jMkhsG4FdOFjtew-/view?usp=sharing
                     introOverlay.style.display = 'none';
                 });
             }
