--- a/index.html
+++ b/index.html
@@ -289,12 +289,20 @@
 
             /* Perbaikan Ukuran Hitwebcounter pada Mobile */
             .hit-counter img {
-                width: 80px; /* Atur lebar gambar sesuai kebutuhan */
-                height: auto; /* Pertahankan aspek rasio */
+                width: 30px; /* Ukuran yang lebih kecil (3x lebih kecil dari sebelumnya) */
+                height: auto;
             }
 
             .hit-counter {
-                margin-top: 10px; /* Sesuaikan jarak jika perlu */
+                margin-top: 10px; /* Mengurangi jarak jika perlu */
+            }
+        }
+
+        /* Desktop Styling untuk Hitwebcounter */
+        @media (min-width: 577px) {
+            .hit-counter img {
+                width: 50px; /* Sesuaikan ukuran untuk desktop jika diperlukan */
+                height: auto;
             }
         }
 
@@ -367,7 +375,7 @@
         /* Tambahan: Pastikan Hitwebcounter tidak mengganggu tampilan pada layar kecil */
         @media (max-width: 576px) {
             .hit-counter img {
-                width: 80px; /* Ukuran yang lebih kecil */
+                width: 30px; /* Ukuran yang sangat kecil */
                 height: auto;
             }
 
@@ -379,7 +387,7 @@
         /* Desktop Styling untuk Hitwebcounter */
         @media (min-width: 577px) {
             .hit-counter img {
-                width: 100px; /* Atur lebar sesuai keinginan untuk desktop */
+                width: 50px; /* Sesuaikan ukuran untuk desktop jika diperlukan */
                 height: auto;
             }
         }
